--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -12,12 +12,12 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: Jerome1337/gofmt-action@v1.0.4
-      
+
+      - name: Run lint
+        run: make lint
+
       - name: Start DB
         run: make db
-
-      - name: Run linter
-        run: make lint
 
       - name: Run unit tests
         run: make unit-test
