Добавил генерацию отчета о покрытии И маленькую доку по использованию

--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -3,11 +3,12 @@ name: Backend CI
 on:
   push:
 
+env:
+  DOCKER_BUILDKIT: "1"
+
 jobs:
-  ci:
+  Lint:
     runs-on: ubuntu-latest
-    env:
-      DOCKER_BUILDKIT: "1"
     steps:
       - uses: actions/checkout@v3
 
@@ -16,8 +17,17 @@ jobs:
       - name: Run lint
         run: make lint
 
+  Unit-test:
+    runs-on: ubuntu-latest
+    needs: [Lint]
+    steps:
+      - uses: actions/checkout@v3
+
       - name: Start DB
         run: make db
 
       - name: Run unit tests
         run: make unit-test
+
+      - name: Get coverage
+        run: make print-coverage
