Added nginx config that proxies requests to the frontend and backend servers. Added nginx container in docker-compose.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,13 @@ services:
       restart_policy:
         condition: on-failure
 
+  nginx:
+    image: nginx
+    container_name: nginx_container
+    volumes:
+      - ./pickpin.conf:/etc/nginx/conf.d/pickpin.conf
+    network_mode: host
+
 networks:
   host:
     driver: bridge
