Добавил полный деплой и проксификацию контейнеров

--- a/pickpin.conf
+++ b/pickpin.conf
@@ -1,9 +1,13 @@
 upstream backend {
-    server 127.0.0.1:8080 max_fails=2 fail_timeout=10s;
+    server backend:8080 max_fails=2 fail_timeout=10s;
 }
 
 upstream frontend {
-    server 127.0.0.1:8000 max_fails=2 fail_timeout=10s;
+    server frontend:8000 max_fails=2 fail_timeout=10s;
+}
+
+upstream docs {
+    server docs:80 max_fails=2 fail_timeout=10s;
 }
 
 server {
@@ -11,6 +15,12 @@ server {
 
     access_log /var/log/nginx/pickpin_access.log;
     error_log /var/log/nginx/pickpin_error.log;
+
+    location /api/docs {
+        proxy_pass http://docs/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 
     location /api {
         proxy_pass http://backend;
