--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,14 +12,14 @@ services:
     ports:
       - "5432:5432"
     networks:
-      - host
+      - db_network
+    deploy:
+      restart_policy:
+        condition: on-failure
 
   backend:
     build: "."
     container_name: backend
-    deploy:
-      restart_policy:
-        condition: on-failure
     ports:
       - 8080:8080
     env_file:
@@ -27,7 +27,11 @@ services:
     depends_on:
       - db
     networks:
-      - host
+      - nginx_network
+      - db_network
+    deploy:
+      restart_policy:
+        condition: on-failure
 
   docs:
     image: nginx
@@ -38,7 +42,7 @@ services:
     ports:
       - 8081:80
     networks:
-      - host
+      - nginx_network
     deploy:
       restart_policy:
         condition: on-failure
@@ -52,7 +56,10 @@ services:
     ports:
       - 8000:8000
     networks:
-      - host
+      - nginx_network
+    deploy:
+      restart_policy:
+        condition: on-failure
 
   nginx:
     image: nginx
@@ -61,16 +68,18 @@ services:
       - ./pickpin.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 80:80
-    networks:
-      - host
     depends_on:
       - backend
       - frontend
       - docs
+    networks:
+      - nginx_network
     deploy:
       restart_policy:
         condition: on-failure
 
 networks:
-  host:
+  nginx_network:
+    driver: bridge
+  db-network:
     driver: bridge
