Фикс nginx конфига

--- a/configs/pickpin.conf
+++ b/configs/pickpin.conf
@@ -22,7 +22,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
-    location /api {
+    location /api {        
+        rewrite ^/api(.*)$ $1 break;
         proxy_pass http://backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
