--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,21 @@ services:
       restart_policy:
         condition: on-failure
 
+  redis:
+    image: redis:latest
+    container_name: redis
+    restart: always
+    environment:
+      REDIS_PASSWORD: "${REDIS_PASSWORD}"
+    command: redis-server --requirepass "${REDIS_PASSWORD}"
+    ports:
+      - "6379:6379"
+    networks:
+      - redis-network
+    deploy:
+      restart_policy:
+        condition: on-failure
+
   backend:
     build: "."
     container_name: backend
@@ -26,9 +41,11 @@ services:
       - .env
     depends_on:
       - db
+      - redis
     networks:
       - nginx-network
       - db-network
+      - redis-network
     deploy:
       restart_policy:
         condition: on-failure
@@ -82,4 +99,6 @@ networks:
   nginx-network:
     driver: bridge
   db-network:
+    driver: bridge
+  redis-network:
     driver: bridge
