--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -7,12 +7,26 @@ env:
   DOCKER_BUILDKIT: "1"
 
 jobs:
-  Lint:
+  Format:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
       - uses: Jerome1337/gofmt-action@v1.0.4
+        with:
+          gofmt-flags: '-w'
+
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v4.1.2
+        with:
+            commit_message: Apply formatting changes
+            branch: ${{ github.head_ref }}
+
+  Lint:
+    runs-on: ubuntu-latest
+    needs: [Format]
+    steps:
+      - uses: actions/checkout@v3
 
       - name: Run lint
         run: make lint
