--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
   
   frontend:
     build: 
-      context: https://github.com/frontend-park-mail-ru/2023_1_PracticalDev.git#setup
+      context: https://github.com/frontend-park-mail-ru/2023_1_PracticalDev.git#main
       dockerfile: Dockerfile.prod
     container_name: frontend
     command: npm run server
