--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       - nginx-network
       - db-network
       - redis-network
+      - api-network
     deploy:
       restart_policy:
         condition: on-failure
@@ -98,7 +99,13 @@ services:
 networks:
   nginx-network:
     driver: bridge
+    name: nginx_network
   db-network:
     driver: bridge
+    name: db_network
   redis-network:
     driver: bridge
+    name: redis_network
+  api-network:
+    driver: bridge
+    name: api_network
