Небольшой фикс тестовых данных и nginx конфига

--- a/configs/pickpin.conf
+++ b/configs/pickpin.conf
@@ -17,6 +17,7 @@ server {
     error_log /var/log/nginx/pickpin_error.log;
 
     location /api/docs {
+        rewrite ^/api(.*)$ $1 break;
         proxy_pass http://docs/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
