Добавил дашборд node exporter

--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -20,3 +20,7 @@ scrape_configs:
     metrics_path: '/prometheus'
     static_configs:
       - targets: [ 'auth:9003' ]
+
+  - job_name: 'node'
+    static_configs:
+      - targets: ['node-exporter:9100']
