Добавил ограничение idle соединений.

--- a/configs/postgresql.conf
+++ b/configs/postgresql.conf
@@ -1,1 +1,3 @@
-max_connections = 500       # максимальное число одновременных подключений
+max_connections = 500
+idle_in_transaction_session_timeout = 300s
+idle_session_timeout = 300s
