--- a/prod/docker-compose.prod.yml
+++ b/prod/docker-compose.prod.yml
@@ -5,11 +5,15 @@ services:
     image: postgres
     container_name: db
     restart: always
+    command:
+      - "-c"
+      - 'config_file=/etc/postgresql/postgresql.conf'
     environment:
       POSTGRES_DB: "${POSTGRES_DB}"
       POSTGRES_USER: "${POSTGRES_USER}"
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
-      POSTGRES_MAX_CONNECTIONS: 1000
+    volumes:
+      - ./configs/postgresql.conf:/etc/postgresql/postgresql.conf
     networks:
       - db-network
     deploy:
