Реализовал сервис сокращения ссылок

--- a/.env
+++ b/.env
@@ -3,6 +3,14 @@ PGPORT=5432
 POSTGRES_DB=pickpindb
 POSTGRES_USER=pickpin
 POSTGRES_PASSWORD=pickpinpswd
+
 REDIS_PASSWORD=pickpinpswd
+
 LOG_LEVELS=*
+
 BUCKET_NAME=pickpin
+
+MONGO_ROOT_USER=pickpin
+MONGO_ROOT_PASSWORD=pickpinpswd
+
+SHORT_HOST=localhost:8091
