--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,21 @@ services:
     deploy:
       restart_policy:
         condition: on-failure
+      
+  mongo:
+    image: mongo
+    container_name: mongo
+    environment:
+        MONGO_INITDB_ROOT_USERNAME: "${MONGO_ROOT_USER}"
+        MONGO_INITDB_ROOT_PASSWORD: "${MONGO_ROOT_PASSWORD}"
+        MONGO_INITDB_DATABASE: "url_shortener"
+    ports:
+      - 27017:27017
+    networks:
+      - db-network
+    deploy:
+      restart_policy:
+        condition: on-failure
 
   redis:
     image: redis:latest
@@ -50,6 +65,7 @@ services:
       - images
       - auth
       - search
+      - shortener
     networks:
       - nginx-network
       - db-network
@@ -85,6 +101,9 @@ services:
       - 8087:8087
     env_file:
       - .env
+    depends_on:
+      - db
+      - redis
     deploy:
       restart_policy:
         condition: on-failure
@@ -102,6 +121,28 @@ services:
       - 8089:8089
     env_file:
       - .env
+    depends_on:
+      - db
+    deploy:
+      restart_policy:
+        condition: on-failure
+    networks:
+      - api-network
+      - db-network
+  
+  shortener:
+    build:
+      context: .
+      dockerfile: ./cmd/shortener/Dockerfile
+    container_name: shortener
+    ports:
+      - 8090:8090
+      - 8091:8091
+    depends_on:
+      - db
+      - mongo
+    env_file:
+      - .env
     deploy:
       restart_policy:
         condition: on-failure
@@ -117,37 +158,6 @@ services:
       - ./docs/openapi.yml:/usr/share/nginx/html/openapi.yml:ro
     ports:
       - 8081:80
-    networks:
-      - nginx-network
-    deploy:
-      restart_policy:
-        condition: on-failure
-  
-  frontend:
-    build:
-      context: https://github.com/frontend-park-mail-ru/2023_1_PracticalDev.git#main
-      dockerfile: Dockerfile.prod
-    container_name: frontend
-    command: npm run server
-    ports:
-      - 8000:8000
-    networks:
-      - nginx-network
-    deploy:
-      restart_policy:
-        condition: on-failure
-
-  nginx:
-    image: nginx
-    container_name: nginx
-    volumes:
-      - ./configs/pickpin.conf:/etc/nginx/conf.d/default.conf
-    ports:
-      - 80:80
-    depends_on:
-      - backend
-      - frontend
-      - docs
     networks:
       - nginx-network
     deploy:
