--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,14 +14,12 @@ services:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
     volumes:
       - ./configs/postgresql.conf:/etc/postgresql/postgresql.conf
-    ports:
-      - "5432:5432"
     networks:
       - db-network
     deploy:
       restart_policy:
         condition: on-failure
-      
+
   mongo:
     image: mongo
     container_name: mongo
@@ -29,8 +27,6 @@ services:
         MONGO_INITDB_ROOT_USERNAME: "${MONGO_ROOT_USER}"
         MONGO_INITDB_ROOT_PASSWORD: "${MONGO_ROOT_PASSWORD}"
         MONGO_INITDB_DATABASE: "url_shortener"
-    ports:
-      - 27017:27017
     networks:
       - db-network
     deploy:
@@ -44,8 +40,6 @@ services:
     environment:
       REDIS_PASSWORD: "${REDIS_PASSWORD}"
     command: redis-server --requirepass "${REDIS_PASSWORD}"
-    ports:
-      - "6379:6379"
     networks:
       - redis-network
     deploy:
@@ -53,10 +47,8 @@ services:
         condition: on-failure
 
   backend:
-    build: "."
+    image: backend
     container_name: backend
-    ports:
-      - 8080:8080
     env_file:
       - .env
     depends_on:
@@ -71,34 +63,28 @@ services:
       - db-network
       - redis-network
       - api-network
+    environment:
+        SHORT_HOST: "short.pickpin.ru"
     deploy:
       restart_policy:
         condition: on-failure
 
   images:
-    build:
-      context: .
-      dockerfile: ./cmd/images/Dockerfile
+    image: images
     container_name: images
-    ports:
-      - 8088:8088
+    volumes:
+      - ./.aws/credentials:/root/.aws/credentials
     env_file:
       - .env
     deploy:
       restart_policy:
         condition: on-failure
-    volumes:
-      - ./.aws/credentials:/root/.aws/credentials
     networks:
       - api-network
 
   auth:
-    build:
-      context: .
-      dockerfile: ./cmd/auth/Dockerfile
+    image: auth
     container_name: auth
-    ports:
-      - 8087:8087
     env_file:
       - .env
     depends_on:
@@ -113,12 +99,8 @@ services:
       - redis-network
 
   search:
-    build:
-      context: .
-      dockerfile: ./cmd/search/Dockerfile
+    image: search
     container_name: search
-    ports:
-      - 8089:8089
     env_file:
       - .env
     depends_on:
@@ -131,13 +113,8 @@ services:
       - db-network
   
   shortener:
-    build:
-      context: .
-      dockerfile: ./cmd/shortener/Dockerfile
+    image: shorteneraa
     container_name: shortener
-    ports:
-      - 8090:8090
-      - 8091:8091
     depends_on:
       - db
       - mongo
@@ -158,7 +135,7 @@ services:
       - ./docs/index.html:/usr/share/nginx/html/index.html:ro
       - ./docs/openapi.yml:/usr/share/nginx/html/openapi.yml:ro
     ports:
-      - 8081:80
+      - ${DOCS_PORT}:80
     networks:
       - nginx-network
     deploy:
@@ -195,14 +172,13 @@ services:
       - backend
       - auth
       - images
-    ports:
-      - "9090:9090"
 
   grafana:
     container_name: "grafana"
     image: grafana/grafana:9.5.1
     networks:
       - api-network
+      - grafana-network
     volumes:
       - ./configs/grafana/data:/var/lib/grafana
       - ./configs/grafana/provisioning:/etc/grafana/provisioning
@@ -213,13 +189,14 @@ services:
       GF_INSTALL_PLUGINS: 'grafana-clock-panel,grafana-simple-json-datasource,grafana-piechart-panel'
     ports:
       - "3000:3000"
-    depends_on:
-      - prometheus
 
 networks:
   nginx-network:
     driver: bridge
     name: nginx_network
+  grafana-network:
+    driver: bridge
+    name: grafana_network
   db-network:
     driver: bridge
     name: db_network
