Поменял имя образа у апи

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,19 +14,8 @@ services:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
     volumes:
       - ./configs/postgresql.conf:/etc/postgresql/postgresql.conf
-    networks:
-      - db-network
-    deploy:
-      restart_policy:
-        condition: on-failure
-
-  mongo:
-    image: mongo
-    container_name: mongo
-    environment:
-        MONGO_INITDB_ROOT_USERNAME: "${MONGO_ROOT_USER}"
-        MONGO_INITDB_ROOT_PASSWORD: "${MONGO_ROOT_PASSWORD}"
-        MONGO_INITDB_DATABASE: "url_shortener"
+    ports:
+      - "5432:5432"
     networks:
       - db-network
     deploy:
@@ -40,6 +29,8 @@ services:
     environment:
       REDIS_PASSWORD: "${REDIS_PASSWORD}"
     command: redis-server --requirepass "${REDIS_PASSWORD}"
+    ports:
+      - "6379:6379"
     networks:
       - redis-network
     deploy:
@@ -47,8 +38,10 @@ services:
         condition: on-failure
 
   backend:
-    image: backend
+    build: "."
     container_name: backend
+    ports:
+      - 8080:8080
     env_file:
       - .env
     depends_on:
@@ -57,39 +50,41 @@ services:
       - images
       - auth
       - search
-      - shortener
     networks:
       - nginx-network
       - db-network
       - redis-network
       - api-network
-    environment:
-        SHORT_HOST: "short.pickpin.ru"
     deploy:
       restart_policy:
         condition: on-failure
 
   images:
-    image: images
+    build:
+      context: .
+      dockerfile: ./cmd/images/Dockerfile
     container_name: images
-    volumes:
-      - ./.aws/credentials:/root/.aws/credentials
+    ports:
+      - 8088:8088
     env_file:
       - .env
     deploy:
       restart_policy:
         condition: on-failure
+    volumes:
+      - ./.aws/credentials:/root/.aws/credentials
     networks:
       - api-network
 
   auth:
-    image: auth
+    build:
+      context: .
+      dockerfile: ./cmd/auth/Dockerfile
     container_name: auth
+    ports:
+      - 8087:8087
     env_file:
       - .env
-    depends_on:
-      - db
-      - redis
     deploy:
       restart_policy:
         condition: on-failure
@@ -99,25 +94,12 @@ services:
       - redis-network
 
   search:
-    image: search
+    build:
+      context: .
+      dockerfile: ./cmd/search/Dockerfile
     container_name: search
-    env_file:
-      - .env
-    depends_on:
-      - db
-    deploy:
-      restart_policy:
-        condition: on-failure
-    networks:
-      - api-network
-      - db-network
-  
-  shortener:
-    image: shorteneraa
-    container_name: shortener
-    depends_on:
-      - db
-      - mongo
+    ports:
+      - 8089:8089
     env_file:
       - .env
     deploy:
@@ -126,7 +108,6 @@ services:
     networks:
       - api-network
       - db-network
-      - nginx-network
 
   docs:
     image: nginx
@@ -135,7 +116,38 @@ services:
       - ./docs/index.html:/usr/share/nginx/html/index.html:ro
       - ./docs/openapi.yml:/usr/share/nginx/html/openapi.yml:ro
     ports:
-      - ${DOCS_PORT}:80
+      - 8081:80
+    networks:
+      - nginx-network
+    deploy:
+      restart_policy:
+        condition: on-failure
+  
+  frontend:
+    build:
+      context: https://github.com/frontend-park-mail-ru/2023_1_PracticalDev.git#main
+      dockerfile: Dockerfile.prod
+    container_name: frontend
+    command: npm run server
+    ports:
+      - 8000:8000
+    networks:
+      - nginx-network
+    deploy:
+      restart_policy:
+        condition: on-failure
+
+  nginx:
+    image: nginx
+    container_name: nginx
+    volumes:
+      - ./configs/pickpin.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - 80:80
+    depends_on:
+      - backend
+      - frontend
+      - docs
     networks:
       - nginx-network
     deploy:
@@ -172,13 +184,14 @@ services:
       - backend
       - auth
       - images
+    ports:
+      - "9090:9090"
 
   grafana:
     container_name: "grafana"
     image: grafana/grafana:9.5.1
     networks:
       - api-network
-      - grafana-network
     volumes:
       - ./configs/grafana/data:/var/lib/grafana
       - ./configs/grafana/provisioning:/etc/grafana/provisioning
@@ -189,14 +202,13 @@ services:
       GF_INSTALL_PLUGINS: 'grafana-clock-panel,grafana-simple-json-datasource,grafana-piechart-panel'
     ports:
       - "3000:3000"
+    depends_on:
+      - prometheus
 
 networks:
   nginx-network:
     driver: bridge
     name: nginx_network
-  grafana-network:
-    driver: bridge
-    name: grafana_network
   db-network:
     driver: bridge
     name: db_network
