--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -50,7 +50,7 @@ jobs:
         run: make print-coverage
 
   Deploy:
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: [Lint, Unit-test]
     steps:
@@ -62,20 +62,29 @@ jobs:
         with:
           yc-sa-json-credentials: ${{ secrets.YC_SA_JSON_CREDENTIALS }}
 
-      - name: Build docker imaged
+      - name: Build docker images
         run: make build-images
 
-      - name: Push docker imaged
+      - name: Push docker images
         run: make push-images
-      
-      - name: Run backend # даже интересно, будет ли это работать
+
+      - name: Pull and run on server
         uses: appleboy/ssh-action@master
         with:
           host: pickpin.ru
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.PRIVATE_KEY }}
+          username: ubuntu
+          key: ${{ secrets.PRACTICALDEV_CERT }}
           script: |
+            cat key.json | docker login \
+            --username json_key \
+            --password-stdin \
+            cr.yandex
+
             cd 2023_Practical_Dev/backend
+            git pull --rebase
+
             make pull-images
             make deploy
             make metrics
+
+            cd ../frontend && docker compose restart nginx
