--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -126,7 +126,9 @@ services:
       - db-network
   
   shortener:
-    image: shortener
+    build:
+      context: .
+      dockerfile: ./cmd/shortener/Dockerfile
     container_name: shortener
     depends_on:
       - db
