--- a/configs/postgresql.conf
+++ b/configs/postgresql.conf
@@ -27,9 +27,7 @@ log_rotation_size = 10MB
 # После 500ms которого запрос считается медленным и будет записан в лог
 log_min_duration_statement = 500ms
                    
-# Настройка формата записей логов 
-# Временная метка, идентификатор процесса, уровень логирования, имя пользователя и имя базы данных.
-log_line_prefix = '%t [%p]: [%l-1] user=%u,db=%d '
+log_line_prefix = '%t [%p]: user=%u,db=%d,app=%a,client=%h '
 
 log_filename = 'pickpin-postgres-%Y-%m-%d.log'                  
 
