--- a/prod/docker-compose.prod.yml
+++ b/prod/docker-compose.prod.yml
@@ -22,6 +22,7 @@ services:
       POSTGRES_USER: "${POSTGRES_USER}"
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
     volumes:
+      - ./logs/postgres:/var/log/postgresql
       - ./configs/postgresql.conf:/etc/postgresql/postgresql.conf
     networks:
       - db-network
