--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Start DB
-        run: mkdir -m rwxrw-r-- ./logs && mkdir -m rwxrw-r-- ./logs/postgres  && make db && ./scripts/check_db_available.sh
+        run: mkdir -m 777 ./logs && mkdir -m 777 ./logs/postgres  && make db && ./scripts/check_db_available.sh
 
       - name: Populate DB with test data
         run: ././scripts/populate_db.sh
