Добавил hba и listen_addresses

--- a/configs/postgresql-prod.conf
+++ b/configs/postgresql-prod.conf
@@ -11,15 +11,15 @@
 
 # Наши микросервисы и всесто айпи названия сервисиво из композера:
 # основной сервис, сервиc аутентификации, сервис поиска
-listen_addresses = '172.32.0.6 , 172.32.0.7, 172.32.0.8'	
-port = 5432				
+listen_addresses = 'db'
+port = 5432
 max_connections = 100			
 
 #------------------------------------------------------------------------------
 # REPORTING AND LOGGING
 #------------------------------------------------------------------------------
 
-log_destination = 'jsonlog'
+# log_destination = 'jsonlog'
 logging_collector = on	
 log_directory = '/var/log/postgresql'
 log_file_mode = 0777
