--- a/configs/pg_hba.conf
+++ b/configs/pg_hba.conf
@@ -1,23 +1,5 @@
-# DEFAULT
-# TYPE  DATABASE        USER            ADDRESS                 METHOD
-
-# "local" is for Unix domain socket connections only
-local   all             all                                     trust
-# IPv4 local connections:
-host    all             all             127.0.0.1/32            trust
-# IPv6 local connections:
-host    all             all             ::1/128                 trust
-# Allow replication connections from localhost, by a user with the
-# replication privilege.
-local   replication     all                                     trust
-host    replication     all             127.0.0.1/32            trust
-host    replication     all             ::1/128                 trust
-
-host all all all scram-sha-256
-
-# CUSTOM
 # TYPE  DATABASE        USER                ADDRESS                 METHOD
-# host    pickpindb     pickpin              *                       md5
-host    pickpindb       pickpin_main         backend                 md5
-host    pickpindb       pickpin_main         auth                    md5
-host    pickpindb       pickpin_search       search                  md5
+#host    pickpindb     pickpin              *                      md5
+host    pickpindb       pickpin_main         backend             md5
+host    pickpindb       pickpin_main         172.32.0.7/24             md5
+host    pickpindb       pickpin_search       172.32.0.8/24             md5
