--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
     volumes:
       - ./configs/postgresql-prod.conf:/etc/postgresql/postgresql.conf
-      - ./logs:/var/log/postgresql
+      - ./logs/postgres:/var/log/postgresql
       - ./scripts/migrations/init.sql:/docker-entrypoint-initdb.d/1.sql
       - ./scripts/db_conf/init_user.sql:/docker-entrypoint-initdb.d/2.sql
       - ./scripts/migrations/test_data.sql:/docker-entrypoint-initdb.d/3.sql
