--- a/configs/postgresql-prod.conf
+++ b/configs/postgresql-prod.conf
@@ -19,7 +19,7 @@ max_connections = 100
 # REPORTING AND LOGGING
 #------------------------------------------------------------------------------
 
-# log_destination = 'jsonlog'
+log_destination = 'jsonlog'
 logging_collector = on	
 log_directory = '/var/log/postgresql'
 log_file_mode = 0777
